show / index pages

--- a/app/views/registries/show.html.erb
+++ b/app/views/registries/show.html.erb
@@ -1,3 +1,5 @@
 <h1> Show Registries </h1>
 <h3> Name: <%= @registry.name %> </h3>
 <h3> Location: <%= @registry.location %> </h3>
+
+<p> need to show: </p>
