index, show, edit pages created

--- a/app/views/coordinators/show.html.erb
+++ b/app/views/coordinators/show.html.erb
@@ -2,8 +2,13 @@
 <%= @coordinator.name %>
 
 <p> Need to show: </p>
+<h4> Registries Index (link to show) </h4>
 <li> list of registries </li>
+<h4> Registries (participants collapsed?) </h4>
 <li> list of participants in registry, grouped by coordinator that enrolled them </li>
+<h4> Enroll Participant </h4>
 <li> link to enroll participants in a registry </li>
+<h4> Manage Coordinators </h4>
 <li> link to manage (edit) coordinators </li>
+<h4> Manage Participants </h4>
 <li> link to manage (edit) participants </li>
