join tables created

--- a/app/views/coordinators/home.html.erb
+++ b/app/views/coordinators/home.html.erb
@@ -1,4 +1,6 @@
 <h1> Welcome! </h1>
-<h2> Enter Your Coordinator Credentials: </h2>
-<p> email: </p>
 
+<p> Create Registry </p>
+<p> View Registries </p>
+<p> View Participants </p>
+<p> View Coordinators </p>
