join table created with registry

--- a/app/views/registry_coordinators/new.html.erb
+++ b/app/views/registry_coordinators/new.html.erb
@@ -1,10 +1,17 @@
-<h1> Create Registry </h1>
+<h1> Add Registry Coordinator to <%= @registry.name %> at <%= @registry.location %></h1>
 
-<%= form_for(@registry) do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.label :location %>
-    <%= f.text_field :location %>
-    <%= f.collection_select :coordinator_id, Coordinator.all, :id, :name, prompt: true %>
-    <%= f.submit %>
+<p> Coordinators already added: <p>
+<% if @registry.coordinators.length < 1 %>
+    <p>No Coordinators Yet </p> 
 <% end %>
+
+<% @registry.coordinators.each do |c| %>
+    <%= c.name %>
+<% end %>
+
+<%= form_for(@registry_coordinator) do |f| %>
+    <%= f.hidden_field :registry_id, @registry.id %>
+    <%= f.collection_select :coordinator_id, Coordinator.all, :id, :name, prompt: true %>
+    <%= f.submit value: 'Add Coordinator' %>
+<% end %>
+
