--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -2,14 +2,14 @@
 
 <%= form_for(@participant) do |f| %>
     <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
+    <%= f.text_field :first_name %><br/><br/>
     <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
+    <%= f.text_field :last_name %><br/><br/>
     <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.text_field :email %><br/><br/>
     <%= f.label :phone %>
-    <%= f.text_field :phone %>
+    <%= f.text_field :phone %><br/><br/>
     <%= f.label :contact_method %>
-    <%= f.text_field :contact_method %>
+    <%= f.text_field :contact_method %><br/><br/>
     <%= f.submit %>
     <% end %>
