--- a/app/views/coordinators/login.html.erb
+++ b/app/views/coordinators/login.html.erb
@@ -1,3 +1,9 @@
 <h1> Welcome! </h1>
 <h2> Enter Your Coordinator Credentials: </h2>
+<%= form_for(@coordinator) do |f| %>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+    <%= f.submit %>
+<% end %>
+
 <p> email: </p>
