--- a/app/views/registries/edit.html.erb
+++ b/app/views/registries/edit.html.erb
@@ -1,14 +1,11 @@
 <h1> Edit Details for <%= @registry.name %> at <%= @registry.location %></h1>
 
-<h3> Add Coordiantor </h3>
-
-<%= form_for(@registry_coordinator) do |f| %>
-    <%= f.collection_select :coordinator_id, Coordinator.all, :id, :name, prompt: true %>
-    <%= f.submit value: 'Add Coordinator' %>
-<% end %>
-
-<h3> Add Participant </h3>
-<%= form_for(@registry_participant) do |f| %>
-    <%= f.collection_select :participant_id, Participant.all, :id, :last_name, prompt: true %>
-    <%= f.submit value: 'Add Participant' %>
+<%= form_for(@registry) do |f| %>
+    <%= f.label :name %><br/>
+    <%= f.text_field :name %><br/><br/>
+    <%= f.label :location %><br/>
+    <%= f.text_field :location %><br/><br/>
+    <%= f.label :status %><br/>
+    <%= f.text_field :status %><br/><br/>
+    <%= f.submit %>
 <% end %>
