resolve issue blocking add_participant

--- a/app/views/coordinators/home.html.erb
+++ b/app/views/coordinators/home.html.erb
@@ -1,6 +1,6 @@
 <h1> Welcome! </h1>
 
-<p> Create Registry </p>
-<p> View Registries </p>
-<p> View Participants </p>
-<p> View Coordinators </p>
+<p><%= link_to 'Create Registry', new_registry_path %> </p>
+<p><%= link_to 'View Registries', registries_path %> </p>
+<p><%= link_to 'View Participants', participants_path %> </p>
+<p><%= link_to 'View Coordinators', coordinators_path %> </p>
