--- a/app/views/registry_participants/add_participant.html.erb
+++ b/app/views/registry_participants/add_participant.html.erb
@@ -1,7 +1,12 @@
 <h1> Add to Participant to <%= @registry.name %> at <%= @registry.location %> </h1>
 
 <%= form_for(@registry_participant) do |f| %>
-    <%= f.collection_select :participant_id, Participant.all, :id, :first_name, prompt: true %>
-    <%= f.hidden_field :registry_id, value: @registry.id %>
+    <%= f.label :participant_id %><br/>
+    <%= f.collection_select :participant_id, Participant.all, :id, :first_name, prompt: true %><br/><br/>
+    <%= f.label :coordinator_email %><br/>
+    <%= f.collection_select :coordinator_email, Coordinator.all, :id, :email, prompt: true %><br/><br/>
+    <%= f.label :remarks %><br/>
+    <%= f.text_field :remarks %><br/><br/>
+    <%= f.hidden_field :registry_id, value: @registry.id %>    
     <%= f.submit value='Add Participant' %>
 <% end %>
