--- a/app/views/participants/show.html.erb
+++ b/app/views/participants/show.html.erb
@@ -1,4 +1,4 @@
-<h1> Show Page for <%= @participant.first_name %> <%= @participant.last_name %></h1>
+<h1> Show Page for <%= @participant.name %> </h1>
 
 <h3> Registries: </h3>
 
