--- a/app/views/participants/edit.html.erb
+++ b/app/views/participants/edit.html.erb
@@ -1,1 +1,1 @@
-<h1> Edit Profile for <%= @participant.first_name %> <%=@participant.last_name %> </h1>
+<h1> Edit Profile for <%= @participant.name %> </h1>
