--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -1,10 +1,8 @@
 <h1> Add a Participant </h1>
 
 <%= form_for(@participant) do |f| %>
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %><br/><br/>
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %><br/><br/>
+    <%= f.label :name %>
+    <%= f.text_field :name %><br/><br/>
     <%= f.label :email %>
     <%= f.text_field :email %><br/><br/>
     <%= f.label :phone %>
