--- a/app/views/participants/show.html.erb
+++ b/app/views/participants/show.html.erb
@@ -10,6 +10,7 @@
     <%= r.name %>, <%= r.location %>
 <% end %>
 
-
-
-# <%= link_to 'Add to a Registry', add_participant_path %>
+<br/><br/>
+<%= link_to 'Update Profile', edit_participant_path %>
+<br/><br/>
+<%= link_to 'Add to a Registry', add_registry_path %>
