--- a/app/views/coordinators/edit.html.erb
+++ b/app/views/coordinators/edit.html.erb
@@ -1,11 +1,15 @@
 <h1> Edit Information for <%= @coordinator.name %> </h1>
 
 <%= form_for(@coordinator) do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-    <%= f.label :phone %>
-    <%= f.text_field :phone %>
+    <%= f.label :name %><br/>
+    <%= f.text_field :name %><br/><br/>
+    <%= f.label :email %><br/>
+    <%= f.text_field :email %><br/><br/>
+    <%= f.label :phone %><br/>
+    <%= f.text_field :phone %><br/><br/>
     <%= f.submit %>
-    <% end %>
+<% end %>
+
+<br/><br/>
+
+<%= link_to 'Delete Coordinator' %>
