--- a/app/views/coordinators/home.html.erb
+++ b/app/views/coordinators/home.html.erb
@@ -3,4 +3,5 @@
 <p><%= link_to 'Create Registry', new_registry_path %> </p>
 <p><%= link_to 'View Registries', registries_path %> </p>
 <p><%= link_to 'View Participants', participants_path %> </p>
+<p><%= link_to 'Add Participant', new_participant_path %> </p>
 <p><%= link_to 'View Coordinators', coordinators_path %> </p>
