--- a/app/views/coordinators/new.html.erb
+++ b/app/views/coordinators/new.html.erb
@@ -1,11 +1,20 @@
-<h1> Add a Coordinator </h1>
+<h1> Create a Coordinator Profiile </h1>
+
+<% if @coordinator.errors.any? %>
+  <h2 style='color: red'> Hang On! There Was an Error... </h2>
+  <ul>
+  <% @coordinator.errors.full_messages.each do |error| %>
+    <li style='color: red'><%= error %></li>
+  <% end %>
+</ul>
+<% end %>
 
 <%= form_for(@coordinator) do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-    <%= f.label :phone %>
-    <%= f.text_field :phone %>
-    <%= f.submit %>
-    <% end %>
+  <%= f.label :name %><br/>
+  <%= f.text_field :name %><br/><br/>
+  <%= f.label :email %><br/>
+  <%= f.text_field :email %><br/><br/>
+  <%= f.label :phone %><br/>
+  <%= f.text_field :phone %><br/><br/>
+  <%= f.submit %>
+<% end %>
