--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
 
   <body>
+    <header>
+      <table>
+        <tr>
+          <td><%= link_to 'Registries', registries_path %></td>
+          <td><%= link_to 'Add Registry', new_registry_path %></td>
+          <td><%= link_to 'Coordinators', coordinators_path %></td>
+          <td><%= link_to 'Add Coordinator', new_coordinator_path %></td>
+          <td><%= link_to 'Participants', participants_path %></td>
+          <td><%= link_to 'Add Participant', new_participant_path %></td>
+        </tr>
+      </table>
+    </header>
+
     <%= yield %>
   </body>
 </html>
