--- a/app/views/registries/show.html.erb
+++ b/app/views/registries/show.html.erb
@@ -3,32 +3,36 @@
 <h3> Location: <%= @registry.location %> </h3>
 <h3>Status: <%= @registry.status %> </h3>
 
-<h4>Coordinator(s):</h4>
-<ul>
+<h4>Coordinator(s):</h4>  
+  <ul>
     <% @registry.coordinators.each do |c| %>
-        <li><%= c.name %>, <%=c.email%>, <%=c.phone %></li>
+      <li><%= c.name %>, <%=c.email%>, <%=c.phone %></li>
     <% end %>
-</ul>
+  </ul>
 
 <h4> Participants: </h4>
 
-<table>
-        <tr>
-            <th>Coordinator</th>
-            <th>Name</th>
-            <th>Gender</th>
-            <th>DOB</th>
-        </tr>
-
-<% @registry.participants.each do |p| %>
+<% if @registry.participants.length < 1 %>
+  <p> No Participants to Display </p>
+<% else %>
+  <table>
     <tr>
-        <td></td>
-        <td><%= link_to p.name %></td>
-        <td><%= p.gender %></td>
-        <td><%= p.dob %></td>
+      <th>Coordinator</th>
+      <th>Name</th>
+      <th>Gender</th>
+      <th>DOB</th>
     </tr>
+
+  <% @registry.participants.each do |p| %>
+    <tr>
+      <td></td>
+      <td><%= link_to p.name, p %></td>
+      <td><%= p.gender %></td>
+      <td><%= p.dob %></td>
+    </tr>
+  <% end %>
+ <table>
 <% end %>
-<table>
 
 <h4><%= link_to 'Update Registry', edit_registry_path %></h4>
 <% if @registry.status == 'Open' %>
