--- a/app/views/coordinators/edit.html.erb
+++ b/app/views/coordinators/edit.html.erb
@@ -12,4 +12,4 @@
 
 <br/><br/>
 
-<%= link_to 'Delete Coordinator' %>
+<%= link_to 'Delete Coordinator', @coordinator, method: :delete, data: {confirm: 'Are you sure? '} %>
