--- a/app/views/registry_participants/add_participant.html.erb
+++ b/app/views/registry_participants/add_participant.html.erb
@@ -4,7 +4,7 @@
     <%= f.label :participant_id %><br/>
     <%= f.collection_select :participant_id, Participant.all, :id, :name, prompt: true %><br/><br/>
     <%= f.label :coordinator_email %><br/>
-    <%= f.collection_select :coordinator_email, Coordinator.all, :id, :email, prompt: true %><br/><br/>
+    <%= f.collection_select :coordinator_email, Coordinator.all, :email, :email, prompt: true %><br/><br/>
     <%= f.label :remarks %><br/>
     <%= f.text_field :remarks %><br/><br/>
     <%= f.label :enrollment_date %><br/>
